<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="horizontal"
    tools:context=".ui.WelcomeActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="bottom">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                style="@style/ContainerForm"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="36dp"
                android:layout_marginBottom="100dp"
                android:gravity="center_horizontal"
                android:letterSpacing=".07"
                android:text="@string/welcome_message"
                android:textAlignment="center" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/welcome_til_person_name"
                style="@style/HabitEditText.Input"
                android:layout_marginBottom="60dp">

                <EditText
                    android:id="@+id/welcome_et_person_name"
                    style="@style/HabitEditText"
                    android:autofillHints="false"
                    android:hint="@string/hint_person_name" />
            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/welcome_btn_enter"
                style="@style/HabitButton"
                android:text="@string/btn_enter" />

        </LinearLayout>
    </ScrollView>
</LinearLayout>